[fix]overflow-x

--- a/styles/main.css
+++ b/styles/main.css
@@ -356,6 +356,8 @@ body {
 
     padding: 1.5rem 2rem;
 
+    overflow-x: hidden;
+
     z-index: 1;
 }
 
